# notefinder

./: .gitignore  LICENSE  LICENSE.md  Makefile  Makefile.in  Notefinder.pm  README.md  TODO.md  auto.go  build.sh  build_darwin.sh  common.go  common_storage.go  configure.ac  consumer.go  context.go  editor.go  event.go  file.go  go.mod  go.sum  google.go  indexer.go  interpreter.go  l10n.go  list.go  load.go  logo.go  main.go  mozilla.go  note.go  notebook.go  notefinder.desktop  pdf.go  stemming.go  store.go  toolbar.go  types.go  ui.go  window.go  (+1 more)
internal/notefinder/app/: context.go  store.go
internal/notefinder/background/: consumer.go  stemming.go  worker.go
internal/notefinder/common/: common.go
internal/notefinder/db/: common_storage.go
internal/notefinder/event/: event.go
internal/notefinder/implementation/: file.go  google.go  mozilla.go
internal/notefinder/interpreter/: interpreter.go  interpreter_darwin.go
internal/notefinder/types/: note.go  notebook.go  query.go
internal/notefinder/ui/: editor.go  list.go  logo.go  toolbar.go  window.go
internal/notefinder/util/: pdf.go  util.go
rpm/: notefinder.spec
scripts/: gen.sh
